<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="28dp"
                android:layout_gravity="center"
                android:layout_marginTop="40dp"
                android:text="Need to Self-isolate?"
                android:textAlignment="center"
                android:textColor="#312255"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_gravity="end"
                android:layout_marginTop="5dp"
                android:text="(All information has been sourced from the NHS)"
                android:textAlignment="center"
                android:textColor="#312255"
                android:textSize="16sp"
                android:textStyle="italic"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="18dp"
                android:text="What is self-isolation?"
                android:textColor="#312255"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="@string/self_isolation_info1"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />


            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="What to do if you have symptoms:"
                android:textColor="#312255"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="Self-isolate immediately if:"
                android:textColor="#312255"
                android:textSize="20dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:text="@string/self_isolation_info2"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="@string/self_isolation_info3"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="@string/self_isolation_info4"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="@string/self_isolation_info5"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="@string/self_isolation_info5"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="@string/self_isolation_info6"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_gravity="end"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="How to self-isolate:"
                android:textColor="#312255"
                android:textSize="24dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="✖ Do not go to work, school or public places – work from home if you can"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="✖ Do not go on public transport or use taxis"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="✖ Do not go out to get food and medicine – order it online or by phone, or ask someone to bring it to your home"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="✖ Do not have visitors in your home, including friends and family – except for people providing essential care"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="90dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:background="@drawable/border"
                android:padding="10dp"
                android:text="✖ Do not go out to exercise – exercise at home or in your garden, if you have one"
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="Call 111 if you cannot get help online.  Do not go to places like a GP surgery, hospital or pharmacy."
                android:textAlignment="center"
                android:textColor="#312255"
                android:textSize="16dp"
                android:textStyle="bold"
                tools:ignore="RtlCompat" />

        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="80dp"
        android:text="Home"
        android:id="@+id/btn_home"
        android:textSize="25sp"
        android:onClick="onClick"
        android:background="@drawable/buttondark"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:textColor="#fff"
        android:elevation="5dp"
        android:outlineProvider="none"/>


</RelativeLayout>