<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context=".Fragments.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:textSize="28dp"
                android:text="COVID-19 Symptoms"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_gravity="center"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="24dp"
                android:layout_marginTop="5dp"
                android:text="(All information has been sourced from the NHS)"
                android:textAlignment="center"
                android:textStyle="italic"
                android:textSize="16sp"
                android:layout_gravity="end"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="20dp"
                android:text="Main Symptoms:"
                android:textStyle="bold"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:textSize="24dp"
                android:layout_gravity="end"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/high_temperature"
                android:textSize="20dp"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="130dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/new_continuous_cough"
                android:textSize="20dp"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="@string/cannot_smell_or_taste"
                android:textSize="20dp"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginTop="30dp"
                android:text="What to do if you have symptoms:"
                android:textStyle="bold"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:textSize="24dp"
                android:layout_gravity="end"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="If you have any of the main symptoms of coronavirus:"
                android:textSize="20dp"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="18dp"
                android:text="1. Get a test to check if you have coronavirus as soon as possible."
                android:textColor="#312255"
                android:textSize="20dp"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="110dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="2. You and anyone you live with should stay at home and not have visitors until you get your test result – only leave your home to have a test."
                android:textSize="20dp"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:layout_centerHorizontal="true"
                android:text="Anyone in your support bubble should also stay at home if you have been in close contact with them since your symptoms started or during the 48 hours before they started."
                android:textSize="20dp"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textStyle="bold"
                android:layout_centerHorizontal="true"
                android:text="Call 111 if you cannot get help online.  Do not go to places like a GP surgery, hospital or pharmacy."
                android:textSize="16dp"
                android:textColor="#312255"
                tools:ignore="RtlCompat" />


        </LinearLayout>

    </ScrollView>

    <Button
        android:layout_width="match_parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_height="80dp"
        android:text="Home"
        android:id="@+id/btn_home"
        android:textSize="25sp"
        android:onClick="onClick"
        android:background="@drawable/buttondark"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="60dp"
        android:textColor="#fff"
        android:elevation="5dp"
        android:outlineProvider="none"/>

</RelativeLayout>